# BrickBlade

./: .env.example  .gitignore  DEPLOY.md  README.md  code_overview.html  lego-inventory-apis-research.md  pyproject.toml
launchd/: com.brickblade.api.plist  com.brickblade.refresh-catalog.plist  com.brickblade.refresh-prices.plist  install.sh
src/brickblade/: __init__.py  cli.py  config.py
src/brickblade/api/: app.py  deps.py  routes.py
src/brickblade/clients/: base.py  bricklink.py  brickognize.py  brickset.py  rebrickable.py  upcitemdb.py
src/brickblade/core/: lookup.py  pricing.py  schemas.py  service.py  sets.py
src/brickblade/db/: models.py  session.py
src/brickblade/jobs/: import_catalog.py  refresh_prices.py
tests/: test_api.py  test_cli.py  test_clients.py  test_config.py  test_core.py  test_import_catalog.py
